hphp/hack/test/typecheck/tests_bypass_visibility/internal_class_no_attr.php.exp
ERROR: File "internal_class_no_attr.php--non_test.php", line 5, characters 9-22:
Cannot access an internal element from module `m` in the default module (Typing[4444])
  File "internal_class_no_attr.php--defs.php", line 5, characters 16-29:
  This is from module `m`
ERROR: File "internal_class_no_attr.php--test.php", line 7, characters 9-22:
Cannot access an internal element from module `m` in the default module (Typing[4444])
  File "internal_class_no_attr.php--defs.php", line 5, characters 16-29:
  This is from module `m`. To allow access from test contexts, add `<<__TestsBypassVisibility>>` to this class
